--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "web-vitals": "^2.1.4"
+    
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "homepage": "https://isabellemaze-portfolio.netlify.app"
+    "homepage": "https://github.com/isa95330/portfolio"
+  
   },
   "eslintConfig": {
     "extends": [
